pasta drawable e icon

--- a/Source/HomeAutomexMobile/HomeAutomex/res/values/strings.xml
+++ b/Source/HomeAutomexMobile/HomeAutomex/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="app_name">Home Automex</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_splash">Home Automex</string>
+    <string name="title_activity_login">LoginActivity</string>
     <string name="hello_world">Hello world!</string>
 
 </resources>
