mudando classe opções do usuario e add configurações em programação, cenario, favoritos e ambiente

--- a/Source/HomeAutomexMobile/HomeAutomex/res/values/strings.xml
+++ b/Source/HomeAutomexMobile/HomeAutomex/res/values/strings.xml
@@ -10,5 +10,9 @@
     <string name="boasvindas">Seja Bem vindo %1$s %2$s.</string>
     <string name="title_activity_opcoes_usuarios">OpcoesUsuariosActivity</string>
     <string name="title_activity_favoritos">FavoritosActivity</string>
+    <string name="title_activity_ambiente">AmbienteActivity</string>
+    <string name="title_activity_configuracoes">ConfiguracoesActivity</string>
+    <string name="title_activity_cenario">CenarioActivity</string>
+    <string name="title_activity_programacao">ProgramacaoActivity</string>
 
 </resources>
